# simple-chat

./: Cargo.toml  README.md
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: connection.rs  main.rs  repl.rs
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  state.rs  ws.rs
server/tests/: integration.rs
