[package]
name = "client"
edition.workspace = true
version.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
proto = { path = "../proto" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
